# cartesian_trajectories

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: cartesian_trajectory.rs  lib.rs  pose_generators.rs  velocity_profile.rs
tests/: integration_tests.rs
